updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a musician and i wish to be a full stack web developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Brooklyn NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are to play my guitar and to build guitars. I also like to play video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I don't have a dream job i just go where i end up</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Sunset park</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because it allows me to be apart with modern day technology and because it gives good jobs</p>
     </section>
 
     <footer id="footer">
